[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "unix-wasm-sandbox"
version = "0.1.1"
description = "A safe Python API for running UNIX-like Wasmer sandboxes."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Tanmay Bakshi" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Interpreters",
    "Topic :: System :: Emulators",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.8,<2",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.maturin]
module-name = "unix_sandbox._native"
python-source = "python"
features = ["extension-module"]
include = [
    { path = "python/unix_sandbox/assets/*.webc.gz", format = "wheel" },
    { path = "python/unix_sandbox/assets/*.json", format = "wheel" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["unix_sandbox"]
